public/assets/css/entitieslist.css
/* ... */
.btn-tertiary:focus {
  outline: none; /* Removes the focus outline when clicked */
  box-shadow: none; /* Removes any default focus shadow */
}

.btn-tertiary:hover {
  color: #007bff; /* Optional: Add hover effect to change icon color */
}

/* Table */
/* Ensure all table cells have equal width */
.table th,
.table td {
  text-align: center;
  word-wrap: break-word; /* Prevents content from overflowing */
  width: 9%;
}

/* Styling buttons inside table cells */
.table .btn {
  margin: 0 4px; /* Adds spacing between buttons */
}

/* Media Queries ----------------------------- */
@media (max-width: 800px) {
  /* Force table to not be like tables anymore */
  #mobile-stack table,
  #mobile-stack thead,
  #mobile-stack tbody,
  #mobile-stack th,
  #mobile-stack td,
  #mobile-stack tr {
    display: block;
  }

  #mobile-stack thead tr {
    display: none;
  }

  #mobile-stack tr {
    border: 1px solid #ccc;
    border-radius: 4px;
    margin-bottom: 1rem;
  }

  #mobile-stack td {
    /* Behave  like a "row" */
    border: none;
    /* border-bottom: 1px solid #eee;  */
    position: relative;
    padding-left: 10%;
    white-space: normal;
    text-align: left !important;
  }

  #mobile-stack td:before {
    position: absolute;
    top: 6px;
    left: 6px;
    width: 45%;
    padding-right: 10px;
    white-space: nowrap;
    text-align: left;
    font-weight: bold;
  }

  /* Label the data */
  /* #mobile-stack td:before { content: attr(data-title); } */

  .table th,
  .table td {
    text-align: center;
    width: 100% !important;
  }

  .select2-container--bootstrap-5 {
    display: block !important;
    width: 80% !important;
  }
}

/*-----------------------------------------------
|   Items
-----------------------------------------------*/

.items {
  flex-wrap: wrap;
  gap: 20px;
}

.edit-icon-items {
  cursor: pointer;
  font-size: 14px;
  padding: 8px;
  background: #fff;
  color: #374151;
  border-radius: 50%;
  width: 24px;
  height: 24px;
  display: flex;
  justify-content: center;
  align-items: center;
  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
  transition:
    background-color 0.3s,
    box-shadow 0.3s;
  border: none;
}

.edit-icon-items:hover {
  background-color: #f9fafb;
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
}

.header {
  font-weight: 600;
  font-size: 13px;
  font-family: inherit !important;
  /* color:rgb(3, 3, 3) */
}

.items-card-text {
  padding: 3px;
  line-height: 1.4;
  border: none;
  border-radius: 6px;
  width: 100%;
  /* background-color: transparent; */
  display: inline-block;
}

.editable {
  /* color: rgb(3, 3, 3); */
  position: relative;
  padding: 3px;
  cursor: pointer;
  border-radius: 6px;
}

/* Edit mode - light blue */
.editable.editing {
  background-color: #d9eafd;
}

.editable input {
  width: 100%;
  height: 1rem;
  padding: 0; /* Remove padding to avoid shifting */
  border: none;
  background-color: transparent;
  color: rgb(12, 12, 12);
  outline: none;
}

.items-card {
  font-size: 14px;
  /* color: rgb(3, 3, 3); */
  flex-grow: 1;
  width: 80%;
}

.item-desc,
.custom-fields {
  border: 1px solid #ccc;
  border-radius: 8px;
  background-color: #f9f9f9;
  padding: 4px 8px;
  line-height: 1.4;
}

.row {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
}

.row-items {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  margin-bottom: 15px;
}

.button-group button {
  width: 100px;
  text-align: center;
  padding: 5px 10px;
}

#header-mobile {
  display: none;
}

/* Pictures Section */

.pictures-section {
  display: grid;
  width: 100%;
  grid-template-columns: repeat(
    auto-fit,
    minmax(300px, 1fr)
  ); /* ensure a responsive design */
  /* max-height: 350px; */
  /* to ensure there is no overflow */
  gap: 32px;
}

.picture-item {
  position: relative;
}

.hidden {
  display: none !important;
}

.picture-placeholder {
  display: flex;
  /* width: 400px;
  height: 230px;
  border: 2px dashed #ccc;
  display: flex;
  align-items: center;
  cursor: pointer;
  background-color: #f9f9f9; */
  /* width: 440px; */
  flex: auto; /* Equal space for both placeholders */
  max-width: 100%; /* Limit the size to prevent overflow */
  max-height: 250px;
  width: 100%;
  height: 100%;
  /* aspect-ratio: 4 / 3; */
  aspect-ratio: 1/1;

  /* height: 250px; */
  border: 2px dashed #ccc;
  display: flex;
  justify-content: center;
  align-items: center;
  position: relative;
  cursor: pointer;
  border-radius: 4px;
  overflow: hidden;
  transition:
    border-color 0.1s ease,
    background-color 0.1s ease;
}

.picture-placeholder i {
  font-size: 24px;
  color: #888;
}

.uploaded-image {
  width: 100%;
  height: 100%;
  object-fit: contain; /* Ensures the whole image is visible */
  /* background-color: #f9f9f9; */
  background-color: inherit; /* git the background from parents instead for dark/light mode */
  border-radius: 4px;
  transform-origin: center;
  transition: transform 0.2s ease;
}

/* Add hover effect for better user experience */
.picture-placeholder:hover {
  border-color: #888;
}

/* Adjust the positioning of the remove button */
.remove-picture {
  position: absolute;
  top: 10px;
  right: 10px;
  background-color: rgba(0, 0, 0, 0.5);
  color: white;
  border: none;
  border-radius: 50%;
  width: 24px;
  height: 24px;
  font-size: 14px;
  cursor: pointer;
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 0;
}

.rotate-picture {
  position: absolute;
  top: 10px;
  right: 40px;
  background-color: rgba(0, 0, 0, 0.5);
  color: white;
  border: none;
  border-radius: 50%;
  width: 24px;
  height: 24px;
  font-size: 14px;
  cursor: pointer;
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 0;
}
/* ... */

